--- a/text.html
+++ b/text.html
@@ -1,99 +1,31 @@
-<p class="a">Talking Tech and AI with Google CEO Sundar Pichai!</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+        <title>text practice</title>
+        <link rel="stylesheet" href="styles/text.css">
+    </head>
+    <body>
+        <p class="a">Talking Tech and AI with Google CEO Sundar Pichai!</p>
 
-<p class="b">3.4M views &middot; 6 months ago</p>
-<p class="c">Marques Brownlee &check;</p>
-<p class="d">
-    Talking Tech and AI on the heels of Google I/O. Also a
-    daily driver phone reveal from Google's CEO.
-    shoutout to Sundar!
-</p>
-<p class="e">  
-    Shop early for the best selection of holiday favourites.
-    <span class="ea">Shop now &gt;</span>
-</p>
-<p class="f">
-    <strong>Shop early</strong> for the <u>best selection</u> of holiday favourites.
-    <span class="fa" >Shop now &gt;</span>
-</p>
-<style>
-    p{
-        font-family: Arial; 
-        margin-top: 0;
-        margin-bottom: 0;
-    }
-    .a
-    {
-        font-family: Arial;
-        font-size: 18px;
-        font-weight: bold;
-        font-style: normal ;
-        text-align: left;
-        width: 280px;
-        line-height: 24px;
-        margin-bottom: 0;
-    }
-    .b
-    {
-        font-family: Arial;
-        font-size: 14px;
-        font-weight: 2px;
-        text-align: left;
-        margin-top: 5px;
-        color: rgb(96, 96, 96);
-        margin-bottom: 0;
-    }
-    .c
-    {
-        font-family: Arial;
-        color: rgb(96, 96, 96);
-        font-size: 14px;
-        margin-top: 25px;
-        margin-bottom: 0;
-    }
-    .d
-    {
-        font-family: Arial;
-        font-size: 14px;
-        color: rgb(96, 96, 96);
-        margin-top: 18px;
-        width: 280px;
-        line-height: 22px;
-        margin-bottom: 100px;
-    }
-    .e
-    {
-        font-size: 14px;
-        text-align: center;
-        background-color: rgb(227, 65, 64);
-        color: white;
-        padding-top:16px;
-        padding-bottom:16px;
-        padding-left: 5px;
-        padding-right: 5px;
-        text-decoration: underline;
-        margin-bottom: 50px;
-    }
-    .f
-    {
-        font-size: 14px;
-        text-align: center;
-        background-color: rgb(227, 65, 64);
-        color: white;
-        padding-top:16px;
-        padding-bottom:16px;
-        padding-left: 5px;
-        padding-right: 5px;
-    }
-    .fa
-    {
-        cursor: pointer; 
-    }
-    .fa:hover
-    {
-        text-decoration: underline;
-    }
-    .ea
-    {
-        margin-left: 30px;
-    }
-</style>
+        <p class="b">3.4M views &middot; 6 months ago</p>
+        <p class="c">Marques Brownlee &check;</p>
+        <p class="d">
+            Talking Tech and AI on the heels of Google I/O. Also a
+            daily driver phone reveal from Google's CEO.
+            shoutout to Sundar!
+        </p>
+        <p class="e">  
+            Shop early for the best selection of holiday favourites.
+            <span class="ea">Shop now &gt;</span>
+        </p>
+        <p class="f">
+            <strong>Shop early</strong> for the <u>best selection</u> of holiday favourites.
+            <span class="fa" >Shop now &gt;</span>
+        </p>
+
+    </body>
+</html>
+
