--- a/ex4.html
+++ b/ex4.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Google.com</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
@@ -25,6 +26,7 @@
             }
             .search_menu
             {
+                font-family: Open Sans;
                 width: 350px;
                 border: none;
                 padding-top: 10px;
@@ -90,10 +92,145 @@
             }
             .topper
             {
-                margin-left: 1325px;
+                margin-top: 10px;
+                margin-left: 1320px;
                 font-family: Open Sans;
             }
-            
+            .search
+            {
+                display: inline-block;
+            }
+            .r
+            {
+                background-color: rgb(202, 201, 201);
+                border: none;
+                display: block;
+                margin-left: 15px;
+                padding-left: 12px;
+                padding-right: 12px;
+                padding-top: 9px;
+                padding-bottom: 9px;
+                border-radius: 30px;
+                margin-bottom: 20px;
+            }
+            .k
+            {
+                font-size: 13px;
+                font-family: Open Sans;
+                margin-bottom: 0;
+            }
+            .i
+            {
+                border-radius: 5px;
+                padding-left: 15px;
+                padding-top: 20px;
+                padding-bottom: 5px;
+                padding-right: 15px;
+                display: inline-block;
+                transition: background-color 0.2s;
+                cursor: pointer;
+                margin-left: 600px;
+            }
+            .i:hover
+            {
+                background-color: rgb(225, 222, 222);
+            }
+            .s
+            {
+                background-color: rgb(202, 201, 201);
+                border: none;
+                display: block;
+                margin-left: 7px;
+                padding-left: 13px;
+                padding-right: 13px;
+                padding-top: 10px;
+                padding-bottom: 10px;
+                border-radius: 30px;
+                margin-bottom: 20px;
+            }
+            .n
+            {
+                font-size: 13px;
+                font-family: Open Sans;
+                margin-bottom: 0;
+            }
+            .t
+            {
+                background-color: rgb(205, 217, 242);
+                border: none;
+                display: block;
+                margin-left: 17px;
+                padding-left: 15px;
+                padding-right: 15px;
+                padding-top: 8px;
+                padding-bottom: 8px;;
+                border-radius: 25px;
+                margin-bottom: 20px;
+            }
+            .q
+            {
+                font-size: 13px;
+                font-family: Open Sans;
+                margin-bottom: 0;
+            }
+            .p
+            {
+                font-size: 25px;
+            }
+            .l
+            {
+                border-radius: 5px;
+                padding-left: 25px;
+                padding-top: 15px;
+                padding-bottom: 5px;
+                padding-right: 25px;
+                display: inline-block;
+                transition: background-color 0.2s;
+                cursor: pointer;
+            }
+            .l:hover
+            {
+                background-color: rgb(225, 222, 222);
+            }
+            .o
+            {
+                border-radius: 5px;;
+                padding-left: 15px;
+                padding-top: 15px;
+                padding-bottom: 5px;
+                padding-right: 15px;
+                display: inline-block;
+                transition: background-color 0.2s;
+                cursor: pointer;
+            }
+            .o:hover
+            {
+                background-color: rgb(225, 222, 222);
+            }
+            .u
+            {
+                margin-top: 215px;
+                margin-left: 1340px;
+                display:block;
+                border: none;
+                background-color: rgb(205, 217, 242);
+                padding-bottom: 5px;
+                padding-top: 5px;
+                padding-left: 15px;
+                padding-right: 15px;
+                border-radius: 16px;
+                box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
+            }
+            .v
+            {
+                width: 17px;
+            }
+            .w
+            {
+                font-family: Open Sans;
+                font-size: 13px;;
+                text-align: center;
+            }
         </style>
     </head>
     <body>
@@ -114,5 +251,28 @@
                 <img class="d" src="google lens.png">
             </button>
         </div>
+        <div class="i">
+            <button class="r">
+                <img class="j" src="1.png">
+            </button>
+            <p class="k">&#40;1&#41; YouTube</p>
+        </div>
+        <div class="l">
+            <button class="s">
+                <img class="m" src="2.png">
+            </button>
+            <span class="n">Wifi Login</span>
+        </div>
+        <div class="o">
+            <button class="t">
+                <span class="p">+</span>
+            </button>
+            <span class="q">Add Shortcut</span>
+        </div>
+        <button class="u">
+            <img class="v" src="4.png">
+            <span class="w"> Customise Chrome</span>
+        </button>
+        
     </body>
 </html>
